# PHPCompass

./: CMakeLists.txt  main.cpp
Magnet/: CMakeLists.txt  config.h.in  main.cpp
Magnet/src/: symbol.h
Magnet/src/application/: application.cpp  application.h
Magnet/src/application/yaml/: yaml_option_parser.cpp  yaml_option_parser.h
Magnet/src/domain/iterator/: target_file_iterator.cpp  target_file_iterator.h
Magnet/src/domain/parse/: symbol.cpp
Magnet/src/iterator/: target_file_iterator.cpp  target_file_iterator.h
Magnet/test/functionnal/: config.yaml
Needle/: CMakeLists.txt
Needle/parser/: lexer.l
Needle/src/files/: file_info_manager.h
Needle/test/: index.php
parser/: CMakeLists.txt  lexer.l  parser.y
src/files/: file_info.cpp  file_info.h  file_info_manager.cpp
test/: index.php
